# secunda

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: bfff833ba1f6_init_schema.py
src/app/: main.py
src/app/api/: deps.py  error_handlers.py  router.py
src/app/api/v1/: activities.py  buildings.py  organizations.py
src/app/core/: asyncio_win.py  errors.py  settings.py
src/app/db/: session.py
src/app/models/: __init__.py  activity.py  building.py  organization.py
src/app/repos/: activities.py  base.py  buildings.py  dto.py  organizations.py
src/app/schemas/: activity.py  building.py  common.py  errors.py  organization.py
src/app/scripts/: seed.py
src/app/services/: activities.py  buildings.py  organizations.py
